--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
         "postcss": "^8.4.24",
         "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "flowbite": "^1.7.0",
+        "swiper": "^10.0.3"
     }
 }
