--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "cviebrock/eloquent-sluggable": "^10.0",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
-        "jantinnerezo/livewire-alert": "*",
+        "jantinnerezo/livewire-alert": "^2.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
